# bilrost

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  FUZZING.md  KANI.md  NOTICE  README.md  downgrade-for-msrv.sh  flake.nix  format-readme-docs.sh  msrv-pins.txt  prepare-release.sh  publish-release.sh  set-unreleased-version.sh  update-version.sh
.github/workflows/: ci.yml  cifuzz.yml
benches/: varint.rs
bilrost-build/: Cargo.toml  README.md
bilrost-build/src/: ast.rs  code_generator.rs  extern_paths.rs  lib.rs  message_graph.rs
bilrost-build/src/fixtures/field_attributes/: _expected_field_attributes.rs  _expected_field_attributes_formatted.rs
bilrost-build/src/fixtures/helloworld/: _expected_helloworld.rs  _expected_helloworld_formatted.rs
bilrost-build/src/fixtures/imports_empty/: _expected_include.rs  imports_empty.proto
bilrost-derive/: Cargo.toml  README.md
bilrost-derive/src/: attrs.rs  lib.rs
bilrost-derive/src/field/: map.rs  message.rs  mod.rs  oneof.rs  scalar.rs  value.rs
bilrost-types/: Cargo.toml  NOTICE  README.md
bilrost-types/src/: compiler.rs  datetime.rs  derived_message_tests.rs  lib.rs  protobuf.rs  types.rs
prost-derive/src/: lib.rs
prost-derive/src/field/: mod.rs
protobuf/: Cargo.toml  README.md  build.rs
protobuf/benches/: dataset.rs
protobuf/src/: lib.rs
src/: derived_message_tests.rs  encoding.rs  error.rs  helpers.rs  lib.rs  message.rs  types.rs
src/encoding/: fixed.rs  general.rs  map.rs  mod.rs  opaque.rs  packed.rs  plain_bytes.rs  unpacked.rs  value_traits.rs  varint.rs  vec_blob.rs
tests/: Cargo.toml
tests/single-include/: Cargo.toml  build.rs
tests/single-include/src/outdir/: outdir.rs
tests/src/: bootstrap.rs  build.rs  debug.rs  extern_paths.rs  generic_derive.rs  lib.rs  message_encoding.rs  skip_debug.rs  well_known_types.rs
tests/src/no_root_packages/: mod.rs
