[package]
name = "bilrost"
version = "0.12.3"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com",
    "Tokio Contributors <team@tokio.rs>",
    "Kent Ross <k@mad.cash>",
]
license = "Apache-2.0"
repository = "https://github.com/mumbleskates/bilrost"
readme = "README.md"
description = "A compact protobuf-like serializer and deserializer for the Rust Language."
keywords = ["serialization"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.65"

[workspace]
members = [
    "bilrost-derive",
    "bilrost-types",
]

exclude = [
    # The fuzz crate can't be compiled or tested without the 'cargo fuzz' command,
    # so exclude it from normal builds.
    "fuzz",
    # Same counts for the afl fuzz targets
    "afl",
]

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
default = ["derive", "std"]
derive = ["dep:bilrost-derive"]
extended-diagnostics = ["dep:const_panic"]
hashbrown = ["dep:hashbrown"]
no-recursion-limit = []
std = []

[dependencies]
bytes = { version = "1", default-features = false }
bilrost-derive = { version = "0.12.3", path = "bilrost-derive", optional = true }
const_panic = { version = "0.2", optional = true }
hashbrown = { version = ">=0.1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
env_logger = { version = "0.11", default-features = false }
log = "0.4"
proptest = "1"
rand = "0.8"

[profile.bench]
debug = true

[[bench]]
name = "varint"
harness = false
