[package]
name = "bilrost"
version = "0.999.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com",
    "Tokio Contributors <team@tokio.rs>",
    "Kent Ross <k@mad.cash>",
]
license = "Apache-2.0"
repository = "https://github.com/mumbleskates/bilrost"
readme = "README.md"
description = "A compact protobuf-like serializer and deserializer for the Rust Language."
keywords = ["serialization"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.70"

[workspace]
members = [
    "bilrost-derive",
    "bilrost-types",
]

exclude = [
    # The fuzz crate can't be compiled or tested without the 'cargo fuzz' command,
    # so exclude it from normal builds.
    "fuzz",
    # Same counts for the afl fuzz targets
    "afl",
]

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
default = ["derive", "detailed_errors", "std"]
derive = ["dep:bilrost-derive"]
detailed_errors = ["dep:thin-vec"]
extended-diagnostics = ["dep:const_panic"]
hashbrown = ["dep:hashbrown"]
no-recursion-limit = []
opaque = ["dep:btreemultimap"]
std = []

[dependencies]
bilrost-derive = { version = "0.999.0", path = "bilrost-derive", optional = true }
btreemultimap = { version = "0.1", optional = true }
bytes = { version = "1", default-features = false }
const_panic = { version = "0.2", optional = true }
hashbrown = { version = ">=0.1.0", optional = true }
thin-vec = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
itertools = "0.12"
proptest = "1"
rand = "0.8"
static_assertions = "1"

[profile.bench]
debug = true

[[bench]]
name = "varint"
harness = false

[[bin]]
name = "derived_message_tests"
required-features = ["derive", "opaque"]
