[package]
name = "bilrost"
version = "0.1004.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com",
    "Tokio Contributors <team@tokio.rs>",
    "Kent Ross <k@mad.cash>",
]
license = "Apache-2.0"
repository = "https://github.com/mumbleskates/bilrost"
documentation = "https://docs.rs/bilrost"
readme = "README.md"
description = "A compact protobuf-like serializer and deserializer for the Rust Language."
keywords = ["serialization"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.65"

[workspace]
members = [
    "bilrost-derive",
    "bilrost-types",
]

exclude = [
    # The fuzz crate can't be compiled or tested without the 'cargo fuzz' command,
    # so exclude it from normal builds.
    "fuzz",
    # Same counts for the afl fuzz targets
    "afl",
]

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
default = ["derive", "detailed-errors", "std"]
bytestring = ["dep:bytestring"]
derive = ["dep:bilrost-derive"]
detailed-errors = ["dep:thin-vec"]
extended-diagnostics = ["dep:const_panic"]
hashbrown = ["dep:hashbrown"]
no-recursion-limit = []
opaque = ["dep:btreemultimap"]
smallvec = ["dep:smallvec"]
std = []
thin-vec = ["dep:thin-vec"]
tinyvec = ["dep:tinyvec"]

[dependencies]
bilrost-derive = { version = "0.1004.0", path = "bilrost-derive", optional = true }
btreemultimap = { version = "0.1", optional = true }
bytes = { version = "1", default-features = false }
bytestring = { version = ">=1", optional = true }
const_panic = { version = "0.2", optional = true }
hashbrown = { version = ">=0.1.0", optional = true }
smallvec = { version = ">=1.6.1", features = ["const_generics"], optional = true }
thin-vec = { version = ">=0.2", optional = true }
tinyvec = { version = ">=1", features = ["alloc"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
itertools = "0.12"
proptest = "1"
rand = "0.8"
static_assertions = "1"

[profile.bench]
debug = true

[[bench]]
name = "varint"
harness = false

[[bin]]
name = "derived_message_tests"
required-features = ["derive", "opaque"]
