[package]
name = "bilrost-types"
version = "0.1004.0-dev"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com",
    "Tokio Contributors <team@tokio.rs>",
    "Kent Ross <k@mad.cash>",
]
license = "Apache-2.0"
repository = "https://github.com/mumbleskates/bilrost"
documentation = "https://docs.rs/bilrost-types"
readme = "README.md"
description = "A compact protobuf-like serializer and deserializer for the Rust Language."
edition = "2021"
rust-version = "1.65"

[lib]
doctest = false

[features]
default = ["std"]
serde_json = ["dep:serde_json"]
std = ["bilrost/std"]

[dependencies]
bilrost = { version = "0.1004.0-dev", path = "..", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "float_roundtrip"], optional = true }

[dev-dependencies]
bilrost = { version = "0.1004.0-dev", path = "..", default-features = false, features = ["derive", "opaque"] }
itertools = { version = ">=0.10, <0.13", default-features = false, features = ["use_alloc"] }
proptest = "1"
