[package]
name = "tests"
version = "0.0.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2018"

build = "src/build.rs"

[features]
default = ["std"]
std = []

[dependencies]
anyhow = "1.0.1"
# bytes = "1"
cfg-if = "1"
bilrost = { path = ".." }
bilrost-types = { path = "../bilrost-types" }
protobuf = { path = "../protobuf" }

[dev-dependencies]
diff = "0.1"
bilrost-build = { path = "../bilrost-build", features = ["cleanup-markdown"] }
tempfile = "3"

[build-dependencies]
cfg-if = "1"
env_logger = { version = "0.10", default-features = false }
bilrost-build = { path = "../bilrost-build" }
protobuf = { path = "../protobuf" }
